# libtensorflow_cc_object_detection

./: CMakeLists.txt  Readme.md  TFObjectDetection.cpp  TFObjectDetection.hpp  libtensorflow_cc_object_detection.cpp
.github/workflows/: cmake.yml
benchmarks/: TFObjectDetection_benchmark.cpp
src/: TFObjectDetection.hpp
tests/: TFObjectDetection_test.cpp
